# voicechanger

./: .gitignore  README.md  README.txt  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: android.yml  release.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/com/qwulise/voicechanger/app/: MainActivity.kt  ModuleConfigClient.kt  RootConfigPublisher.kt  SoundpadImporter.kt  SoundpadOverlayBubbleService.kt  UiSettingsStore.kt  VendorAudioController.kt  VoiceQuickTileService.kt
app/src/main/res/values/: strings.xml  themes.xml
ci/: build-android.sh  build-root-audio-module.sh  package-release-bundle.sh
core/dsp/: build.gradle.kts  consumer-rules.pro
docs/: INSTALL.md  ROOT_ARCHITECTURE.md  ROOT_AUDIO_MODULE.md  VENDOR_AUDIO_FINDINGS.md
module/: build.gradle.kts  proguard-rules.pro
module/src/main/: AndroidManifest.xml
module/src/main/assets/: native_init  xposed_init
module/src/main/cpp/: CMakeLists.txt  voicechanger_native.cpp
module/src/main/java/com/qwulise/voicechanger/module/: AudioHookEntry.kt  DiagnosticLogStore.kt  HookBridge.kt  ModuleEntryActivity.kt  ModuleFileBridge.kt  NativeAudioBridge.kt  ProcessContextResolver.kt  SoundpadRuntime.kt  VendorHalBridge.kt  VoiceConfigProvider.kt  (+1 more)
module/src/main/res/drawable/: ic_voicechanger_tile.xml
module/src/main/res/values/: arrays.xml  strings.xml  themes.xml
rootaudio/module/: .aml.sh  customize.sh  module.prop  post-fs-data.sh  sepolicy.rule  service.sh
rootaudio/src/: CMakeLists.txt  qwv_preprocess.cpp
(+4 files in other folders)
